one enters when others leave